src-tauri/src/bin/ifai/snapshots/ifai__progress_snapshot_test__tests__snapshot_node_completed_partial_stats.snap
---
source: src/bin/ifai/progress_snapshot_test.rs
expression: snapshot
---

✔ Done                                1.2s · 2 tools
