src-tauri/src/bin/ifai/snapshots/ifai__progress_snapshot_test__tests__snapshot_node_completed_with_stats.snap
---
source: src/bin/ifai/progress_snapshot_test.rs
expression: snapshot
---

✔ Done                                3.3s · 3 tools · 2.4k tokens
