src-tauri/src/bin/ifai/snapshots/ifai__progress_snapshot_test__tests__snapshot_tool_call_with_time.snap
---
source: src/bin/ifai/progress_snapshot_test.rs
expression: snapshot
---
  ├─ ✔ agent_read_file src/main.rs (<1s) → fn main() { println!("Hello"); }
