src-tauri/src/bin/ifai/snapshots/ifai__progress_snapshot_test__tests__snapshot_workflow_completed_with_stats.snap
---
source: src/bin/ifai/progress_snapshot_test.rs
expression: snapshot
---
✔ Workflow complete                   12.0s · 15 tools · 15.0k tokens
